--- a/login.html
+++ b/login.html
@@ -17,12 +17,25 @@
 </head>
 
 <body>
-  <main class="mt-5">
-    <div class="container">
+  <main class="signin">
+
+    <h1>LOGIN</h1>
+
+        <div class="login">   
+                <form action="/login" method="POST">
+                    <label for="username"> USUARIO:</label><br>
+                    <input type="text" id="username" name="username"><br>
+                    <label for="password"> CONTRASEÑA:</label><br>
+                    <input type="password" id="password" name="password"><br>
+                    <input type="submit" value="Ingresar">
+                </form>
+        </div>
+
+      <!--<div class="container">
       <div class="alert alert-danger text-center" role="alert">
         <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
       </div>
-    </div>
+    </div>-->
   </main>
   <footer class="text-muted">
     <div class="container">
