--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" id="usuario"></a>
           </li>
         </ul>
       </div>
@@ -84,6 +85,7 @@
     <div class="container">
       <p class="float-end">
         <a href="#">Volver arriba</a>
+        <button id="logout">Cerrar sesión</button>
       </p>
       <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
     </div>
