--- a/login.html
+++ b/login.html
@@ -11,26 +11,30 @@
   <link href="css/styles.css" rel="stylesheet">
   <style>
     body {
-      background-color: rgb(248, 249, 250);
+      background-image: url(img/fondo.jpg);
+      background-size: cover;
+      background-position: center;
+      background-position-y: -87%;
+      
     }
   </style>
 </head>
 
 <body>
-  <main class="signin">
+  <div class="signin">
 
-    <h1>LOGIN</h1>
-
-        <div class="login" id="form">   
-                <form action="/login" method="POST">
-                    <label for="username"> USUARIO:</label><br>
+    <h1><span id="e">e•</span>mercado</h1>
+        <p><strong>Inicia sesión para poder continuar</strong></p>
+        <div id="form">   
+                <form action="/login" method="POST" id="formulario">
+                    <label for="username"> Ingrese su nombre de usuario</label><br>
                     <input type="text" id="username" name="username" required><br>
-                    <label for="password"> CONTRASEÑA:</label><br>
+                    <label for="password"> Ingrese su contraseña</label><br>
                     <input type="password" id="password" name="password" required minlength="8"><br>
-                    <input type="submit" value="Ingresar">
+                    <input id="enviar" type="submit" value="Ingresar">
                 </form>
         </div>
-  </main>
+  </div>
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
