--- a/login.html
+++ b/login.html
@@ -14,15 +14,14 @@
       background-image: url(img/fondo.jpg);
       background-size: cover;
       background-position: center;
-      background-position-y: -87%;
-      
+      background-repeat: no-repeat;
+      /* height: 83vh;  PROXIMAMENTE... */
     }
   </style>
 </head>
 
 <body>
   <div class="signin">
-
     <h1><span id="e">e•</span>mercado</h1>
         <p><strong>Inicia sesión para poder continuar</strong></p>
         <div id="form">   
