--- a/my-profile.html
+++ b/my-profile.html
@@ -42,9 +42,13 @@
             <a class="nav-link" href="categories.html">Categorías</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="products.html">Productos</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="my-profile.html" id="usuario"></a>
           </li>
         </ul>
       </div>
@@ -61,6 +65,7 @@
     <div class="container">
       <p class="float-end">
         <a href="#">Volver arriba</a>
+        <button id="logout">Cerrar sesión</button>
       </p>
       <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
     </div>
