--- a/products.html
+++ b/products.html
@@ -34,6 +34,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="my-profile.html" id="usuario"></a>
           </li>
         </ul>
       </div>
@@ -45,8 +46,6 @@
         <h2>Autos</h2>
         <p>Verás aquí todos los modelos disponibles al momento.</p>
       </div>
-
-
     </div>
   </main>
   <footer class="text-muted">
