--- a/sell.html
+++ b/sell.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="products.html">Productos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
+            <a class="nav-link active" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="my-profile.html" id="usuario"></a>
