--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="usuario"></a>
+            <a class="nav-link" href="my-profile.html" id="usuario"></a>
           </li>
         </ul>
       </div>
