--- a/products.html
+++ b/products.html
@@ -44,15 +44,19 @@
   </nav>
   <main class="pb-5 container">
     <div class="container">
-      <div class="row">
+      <div id ="titulo">
+        
+      </div>
+      <div id ="filtros">
+        <div class="row">
         <div class="col text-end">
           <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
-            <input type="radio" class="btn-check" name="options" id="sortAsc">
-            <label class="btn btn-light" for="sortAsc">A-Z</label>
             <input type="radio" class="btn-check" name="options" id="sortDesc">
-            <label class="btn btn-light" for="sortDesc">Z-A</label>
-            <input type="radio" class="btn-check" name="options" id="sortByCount" checked>
-            <label class="btn btn-light" for="sortByCount"><i class="fas fa-sort-amount-down mr-1"></i></label>
+            <label class="btn btn-light" for="sortDesc"><i class="fas fa-sort-amount-down mr-1"></i>$</label>
+            <input type="radio" class="btn-check" name="options" id="sortAsc">
+            <label class="btn btn-light" for="sortAsc"><i class="fas fa-sort-amount-up mr-1"></i>$</label>
+            <input type="radio" class="btn-check" name="options" id="sortByRel" checked>
+            <label class="btn btn-light" for="sortByRel"><i class="fas fa-sort-amount-down mr-1"></i>Rel</label>
           </div>
         </div>
       </div>
@@ -63,10 +67,10 @@
               <p class="font-weight-normal text-end my-2">Precio</p>
             </div>
             <div class="col">
-              <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
+              <input class="form-control" type="number" placeholder="min." id="rangeFilterPriceMin">
             </div>
             <div class="col">
-              <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
+              <input class="form-control" type="number" placeholder="máx." id="rangeFilterPriceMax">
             </div>
             <div class="col-3 p-0">
               <div class="btn-group" role="group">
@@ -76,6 +80,10 @@
             </div>
           </div>
         </div>
+      </div>
+      </div>
+      <div id ="productos">
+
       </div>
     </div>
   </main>
