--- a/product-info.html
+++ b/product-info.html
@@ -28,9 +28,13 @@
             <a class="nav-link" href="categories.html">Categorías</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" href="products.html">Productos</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="my-profile.html" id="usuario"></a>
           </li>
         </ul>
       </div>
@@ -38,9 +42,28 @@
   </nav>
   <main>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      
     </div>
   </main>
   <footer class="text-muted">
