--- a/product-info.html
+++ b/product-info.html
@@ -41,29 +41,27 @@
     </div>
   </nav>
   <main>
+    <br><br><br>
     <div class="container">
+      <div class="row border rounded border-2">
+          <div class="d-flex justify-content-between align-items-center mb-3">
+          <button class="btn btn-sm btn-light text-dark" onclick="window.location.href='products.html'">← Volver al listado</button>
+          <button class="btn btn-light">Añadir favoritos ❤</button>
+        </div>
+        <div class="col-6" id="imagen-producto">
+          <h1>(IMAGEN)</h1>
+        </div>
+        <div class="col-6" id="info-producto">
+          <h1>Juego de comedor.</h1>
+          <p>Un conjunto sencillo y sólido, ideal para zonas de comedor pequeñas, hecho en madera maciza de pino.</p>
+          <p>UYU 4000</p>
+          <p>6 cuotas de UYU 666 sin interés</p>
+          <p>Ver tabla de medidas </p> 
+          <p>★ Ver calificaciones</p>
+          <p>Se han vendido 88 unidades</p>
+        </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      
+      </div>
     </div>
   </main>
   <footer class="text-muted">
