--- a/product-info.html
+++ b/product-info.html
@@ -63,6 +63,24 @@
 
       </div>
     </div>
+    <br><br>
+    <h3 style="display: flex; justify-content: center;">Productos relacionados</h3>
+    <br>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-interval="false" style="width: 100%; height: 20%;">
+    <div id="productos-relacionados" class="carousel-inner containter">
+
+    </div>
+    <a class="carousel-control-prev d-flex align-items-center justify-content-center bg-dark rounded-circle" 
+      href="#carouselExampleControls" role="button" data-bs-slide="prev" style="width:50px; height:50px; top: 30%;">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Anterior</span>
+    </a>
+    <a class="carousel-control-next d-flex align-items-center justify-content-center bg-dark rounded-circle" 
+      href="#carouselExampleControls" role="button" data-bs-slide="next" style="width:50px; height:50px; top: 30%;">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Siguiente</span>
+    </a>
+  </div>
   </main>
   <footer class="text-muted">
     <div class="container">
