--- a/product-info.html
+++ b/product-info.html
@@ -48,7 +48,7 @@
           <button class="btn btn-sm btn-light text-dark" onclick="window.location.href='products.html'">← Volver al listado</button>
           <button class="btn btn-light">Añadir favoritos ❤</button>
         </div>
-        <div class="col-6" id="imagen-producto">
+        <div class="col-6 p-5" id="imagen-producto">
           <h1>(IMAGEN)</h1>
         </div>
         <div class="col-6" id="info-producto">
