--- a/products.html
+++ b/products.html
@@ -67,6 +67,41 @@
             </button>
           </div>
           <div class="row">
+            <div class="col text-end">
+              <div
+                class="btn-group btn-group-toggle mb-4"
+                data-bs-toggle="buttons"
+              >
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="options"
+                  id="sortAsc"
+                />
+                <label class="btn btn-light" for="sortAsc"
+                  >$<i class="fas fa-sort-amount-up mr-1"></i
+                ></label>
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="options"
+                  id="sortDesc"
+                />
+                <label class="btn btn-light" for="sortDesc"
+                  >$<i class="fas fa-sort-amount-down mr-1"></i
+                ></label>
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="options"
+                  id="sortByRel"
+                  checked
+                />
+                <label class="btn btn-light" for="sortByRel"
+                  >Rel<i class="fas fa-sort-amount-down mr-1"></i
+                ></label>
+              </div>
+            </div>
             <div class="col-md-4 text-start">
               <input
                 type="search"
