--- a/product-info.html
+++ b/product-info.html
@@ -1,128 +1,144 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>eMercado - Todo lo que busques está aquí</title>
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>eMercado - Todo lo que busques está aquí</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
+      rel="stylesheet"
+    />
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
+  </head>
 
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  <link href="css/font-awesome.min.css" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-between">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="categories.html">Categorías</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="products.html">Productos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="my-profile.html" id="usuario"></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <main>
-    <br><br><br>
-    <div class="container">
-      <div class="row border rounded border-2">
-          <div class="d-flex justify-content-between align-items-center mb-3">
-          <button class="btn btn-sm btn-light text-dark m-3 " onclick="window.location.href='products.html'">← Volver al listado</button>
-          <button class="btn btn-light m-3">Añadir favoritos ❤</button>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
+      <div class="container">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav w-100 justify-content-between">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="categories.html">Categorías</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="products.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sell.html">Vender</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="my-profile.html" id="usuario"></a>
+            </li>
+          </ul>
         </div>
-        <div class="col-6 p-5" id="imagen-producto"></div>
-        <div class="col-6" id="info-producto"></div>
+      </div>
+    </nav>
+    <main>
+      <br /><br /><br />
+      <div class="container">
+        <div class="row border rounded border-2">
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <button
+              class="btn btn-sm btn-light text-dark m-3"
+              onclick="window.location.href='products.html'"
+            >
+              ← Volver al listado
+            </button>
 
-        <div id="calificaciones">
-          <h3>Añade tu comentario:</h3>
+            <button class="btn btn-light m-3">Añadir favoritos ❤</button>
+          </div>
+          <div class="col-6 p-5" id="imagen-producto"></div>
+          <div class="col-6" id="info-producto"></div>
 
-          
-          <div class="mb-3">
-            <label>Tu calificación:</label>
+          <div id="calificaciones">
+            <h3>Añade tu comentario:</h3>
+
+            <div class="mb-3">
+              <label>Tu calificación:</label>
               <div id="stars">
-                  <i class="fas fa-star star" onclick="rate(1)"></i>
-                  <i class="fas fa-star star" onclick="rate(2)"></i>
-                  <i class="fas fa-star star" onclick="rate(3)"></i>
-                  <i class="fas fa-star star" onclick="rate(4)"></i>
-                  <i class="fas fa-star star" onclick="rate(5)"></i>
+                <i class="fas fa-star star" onclick="rate(1)"></i>
+                <i class="fas fa-star star" onclick="rate(2)"></i>
+                <i class="fas fa-star star" onclick="rate(3)"></i>
+                <i class="fas fa-star star" onclick="rate(4)"></i>
+                <i class="fas fa-star star" onclick="rate(5)"></i>
               </div>
               <small>Selecciona tu calificación</small>
+            </div>
+
+            <div
+              class="form-control d-flex flex-column gap-3"
+              id="form-calificacion"
+            >
+              <textarea
+                id="commentText"
+                placeholder="Escribe tu comentario..."
+                rows="3"
+                style="width: 60%; margin-top: 5px"
+              ></textarea>
+              <button class="col-2" onclick="addComment()">
+                Enviar Comentario
+              </button>
+            </div>
+            <br /><br /><br />
+            <h3>Opiniones destacadas:</h3>
+            <div id="lista-calificaciones" style="margin-top: 20px"></div>
+            <div id="commentsList"></div>
           </div>
+        </div>
+      </div>
+      <br /><br />
+      <h3 style="display: flex; justify-content: center">
+        Productos relacionados
+      </h3>
+      <br />
 
-    <div class="d-flex flex-column gap-3" id="form-calificacion">
-        <textarea id="commentText" placeholder="Escribe tu comentario..." rows="3" style="width:60%; margin-top:5px;"></textarea>
-        <button class="col-2" onclick="addComment()">Enviar Comentario</button>
-        <br><br><br>
-        <h3>Opiniones destacadas:</h3>
-    </div>
-
-    <div id="lista-calificaciones" style="margin-top:20px;"></div>
-        <div id="commentsList"></div>
-</div>
-
-
-
-
-
-
+      <div
+        id="relatedProducts"
+        class="carousel-inner containter d-flex justify-content-center"
+      ></div>
+    </main>
+    <footer class="text-muted">
+      <div class="container">
+        <p class="float-end">
+          <a href="#">Volver arriba</a>
+        </p>
+        <p>
+          Este sitio forma parte de
+          <a href="https://jovenesaprogramar.edu.uy/" target="_blank"
+            >Jovenes a Programar</a
+          >
+        </p>
+      </div>
+    </footer>
+    <div id="spinner-wrapper">
+      <div class="lds-ring">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
     </div>
-    <br><br>
-    <h3 style="display: flex; justify-content: center;">Productos relacionados</h3>
-    <br>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-interval="false" style="width: 100%; height: 20%;">
-    <div id="productos-relacionados" class="carousel-inner containter">
-
-    </div>
-    <a class="carousel-control-prev d-flex align-items-center justify-content-center bg-dark rounded-circle" 
-      href="#carouselExampleControls" role="button" data-bs-slide="prev" style="width:50px; height:50px; top: 30%;">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Anterior</span>
-    </a>
-    <a class="carousel-control-next d-flex align-items-center justify-content-center bg-dark rounded-circle" 
-      href="#carouselExampleControls" role="button" data-bs-slide="next" style="width:50px; height:50px; top: 30%;">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Siguiente</span>
-    </a>
-  </div>
-  </main>
-  <footer class="text-muted">
-    <div class="container">
-      <p class="float-end">
-        <a href="#">Volver arriba</a>
-      </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
-    </div>
-  </footer>
-  <div id="spinner-wrapper">
-    <div class="lds-ring">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-  </div>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/init.js"></script>
-  <script src="js/product-info.js"></script>
-</body>
-
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/init.js"></script>
+    <script src="js/product-info.js"></script>
+  </body>
 </html>
