--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                       <input type="text" id="username" name="username" required><br>
                       <label for="password"> Ingrese su contraseña</label><br>
                       <input type="password" id="password" name="password" required minlength="8"><br>
-                      <input id="enviar" type="submit" value="Ingresar">
+                      <input id="enviar" type="submit" value="Ingresar" style="margin-left: 95px; margin-top: 20px;">
                   </form>
           </div>
       </div>
