--- a/cart.html
+++ b/cart.html
@@ -36,9 +36,12 @@
     </div>
   </nav>
   <main>
+    <br><br><br>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div class="row">
+        <div id="row" class="col-12"></div>
+       
+
       </div>
     </div>
   </main>
