--- a/cart.html
+++ b/cart.html
@@ -43,6 +43,8 @@
        
 
       </div>
+      <h2 id="total-pesos"></h2>
+      <h2 id="total-dolares"></h2>
     </div>
   </main>
   <footer class="text-muted">
