--- a/cart.html
+++ b/cart.html
@@ -21,16 +21,23 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="categories.html">Categorías</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
-          </li>
-          <li class="nav-item">
-          </li>
+              <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="categories.html">Categorías</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="products.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sell.html">Vender</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="my-profile.html" id="usuario"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+            </li>
         </ul>
       </div>
     </div>
@@ -39,12 +46,14 @@
     <br><br><br>
     <div class="container">
       <div class="row">
-        <div id="row" class="col-12"></div>
-       
-
+        <div id="row" class="col-12">
+          
+        </div>
+        <div id="totales">
+            <h2 id="total-pesos"></h2>
+            <h2 id="total-dolares"></h2>
+          </div>
       </div>
-      <h2 id="total-pesos"></h2>
-      <h2 id="total-dolares"></h2>
     </div>
   </main>
   <footer class="text-muted">
