--- a/my-profile.html
+++ b/my-profile.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
       rel="stylesheet"
     />
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <style>
@@ -60,11 +61,10 @@
               <a class="nav-link" href="sell.html">Vender</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                href="my-profile.html"
-                id="usuario"
-              ></a>
+              <a class="nav-link active" href="my-profile.html" id="usuario"></a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
             </li>
           </ul>
         </div>
