--- a/products.html
+++ b/products.html
@@ -49,6 +49,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="my-profile.html" id="usuario"></a>
               </li>
+              <li class="nav-item">
+              <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+            </li>
             </ul>
           </div>
         </div>
