--- a/product-info.html
+++ b/product-info.html
@@ -60,23 +60,17 @@
       <div class="container">
         <div class="row border rounded border-2">
           <div class="d-flex justify-content-between align-items-center mb-3">
-            <button
-              class="btn btn-sm btn-light text-dark m-3"
-              onclick="window.location.href='products.html'"
-            >
-              ← Volver al listado
-            </button>
-
+            <button class="btn btn-sm btn-light text-dark m-3" onclick="window.location.href='products.html'">← Volver al listado</button>
             <button class="btn btn-light m-3">Añadir favoritos ❤</button>
           </div>
           <div class="col-6 p-5" id="imagen-producto"></div>
           <div class="col-6" id="info-producto"></div>
 
           <div id="calificaciones">
-            <h3>Añade tu comentario:</h3>
+            <h3 style="color: black;">Añade tu comentario:</h3>
 
             <div class="mb-3">
-              <label>Tu calificación:</label>
+              <label style="color: black;">Tu calificación:</label>
               <div id="stars">
                 <i class="fas fa-star star" onclick="rate(1)"></i>
                 <i class="fas fa-star star" onclick="rate(2)"></i>
@@ -84,13 +78,10 @@
                 <i class="fas fa-star star" onclick="rate(4)"></i>
                 <i class="fas fa-star star" onclick="rate(5)"></i>
               </div>
-              <small>Selecciona tu calificación</small>
+              <small style="color: black;">Selecciona tu calificación</small>
             </div>
 
-            <div
-              class="form-control d-flex flex-column gap-3"
-              id="form-calificacion"
-            >
+            <div class="form-control d-flex flex-column gap-3 " id="form-calificacion">
               <textarea
                 id="commentText"
                 placeholder="Escribe tu comentario..."
