--- a/products.html
+++ b/products.html
@@ -62,47 +62,19 @@
         <div id="titulo"></div>
         <div id="filtros">
           <div class="row m-3">
-            <button
-              class="btn btn-sm btn-light text-dark col-2"
-              onclick="window.location.href='categories.html'"
-            >
+            <button id="go-back" class="btn btn-sm btn-light text-dark col-2" onclick="window.location.href='categories.html'" >
               ← Volver al listado
             </button>
           </div>
           <div class="row">
             <div class="col text-end">
-              <div
-                class="btn-group btn-group-toggle mb-4"
-                data-bs-toggle="buttons"
-              >
-                <input
-                  type="radio"
-                  class="btn-check"
-                  name="options"
-                  id="sortAsc"
-                />
-                <label class="btn btn-light" for="sortAsc"
-                  >$<i class="fas fa-sort-amount-up mr-1"></i
-                ></label>
-                <input
-                  type="radio"
-                  class="btn-check"
-                  name="options"
-                  id="sortDesc"
-                />
-                <label class="btn btn-light" for="sortDesc"
-                  >$<i class="fas fa-sort-amount-down mr-1"></i
-                ></label>
-                <input
-                  type="radio"
-                  class="btn-check"
-                  name="options"
-                  id="sortByRel"
-                  checked
-                />
-                <label class="btn btn-light" for="sortByRel"
-                  >Rel<i class="fas fa-sort-amount-down mr-1"></i
-                ></label>
+              <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
+                <input type="radio" class="btn-check" name="options" id="sortAsc"/>
+                <label class="btn btn-light" for="sortAsc">$<i class="fas fa-sort-amount-up mr-1"></i></label>
+                <input type="radio" class="btn-check" name="options" id="sortDesc"/>
+                <label class="btn btn-light" for="sortDesc">$<i class="fas fa-sort-amount-down mr-1"></i></label>
+                <input type="radio" class="btn-check" name="options" id="sortByRel" checked/>
+                <label class="btn btn-light" for="sortByRel">Rel<i class="fas fa-sort-amount-down mr-1"></i></label>
               </div>
             </div>
             <div class="col-md-4 text-start">
@@ -117,35 +89,18 @@
             <div class="col-lg-6 col-md-12 mb-1 container">
               <div class="row container p-0 m-0">
                 <div class="col">
-                  <p class="font-weight-normal text-end my-2">Precio</p>
+                  <p id="precio" class="font-weight-normal text-end my-2">Precio</p>
                 </div>
                 <div class="col">
-                  <input
-                    class="form-control"
-                    type="number"
-                    placeholder="min."
-                    id="rangeFilterPriceMin"
-                  />
+                  <input class="form-control" type="number" placeholder="min." id="rangeFilterPriceMin"/>
                 </div>
                 <div class="col">
-                  <input
-                    class="form-control"
-                    type="number"
-                    placeholder="máx."
-                    id="rangeFilterPriceMax"
-                  />
+                  <input class="form-control" type="number" placeholder="máx." id="rangeFilterPriceMax"/>
                 </div>
                 <div class="col-3 p-0">
                   <div class="btn-group" role="group">
-                    <button
-                      class="btn btn-light btn-block"
-                      id="rangeFilterCount"
-                    >
-                      Filtrar
-                    </button>
-                    <button class="btn btn-link btn-sm" id="clearRangeFilter">
-                      Limpiar
-                    </button>
+                    <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+                    <button class="btn btn-light btn-block" id="clearRangeFilter">Limpiar</button>
                   </div>
                 </div>
               </div>
