--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link href="css/font-awesome.min.css" rel="stylesheet" />
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -33,8 +35,12 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="my-profile.html" id="usuario"></a>
+          <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="usuario" role="button"></a>
+                <div class="dropdown-menu dropdown-menu-end" id="userDropdown">
+                  <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+                  <a onclick="logOut()" class="dropdown-item" href="#" id="logout-btn">Cerrar sesión</a>
+                </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
@@ -96,6 +102,6 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/index.js"></script>
   <script src="js/init.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
-
 </html>
