--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       background-image: url(img/fondo.jpg);
@@ -29,7 +30,7 @@
           <div id="form">
                   <form action="/login" method="POST" id="formulario">
                       <label for="username"> Ingrese su nombre de usuario</label><br>
-                      <input type="text" id="username" name="username" required><br>
+                      <input type="text" id="username" name="username" required><br><br>
                       <label for="password"> Ingrese su contraseña</label><br>
                       <input type="password" id="password" name="password" required minlength="8"><br>
                       <input id="enviar" type="submit" value="Ingresar" style="margin-left: 95px; margin-top: 20px;">
