--- a/products.html
+++ b/products.html
@@ -66,9 +66,7 @@
         <div id="titulo"></div>
         <div id="filtros">
           <div class="row m-3">
-            <button id="go-back" class="btn btn-sm btn-light text-dark col-2" onclick="window.location.href='categories.html'" >
-              ← Volver al listado
-            </button>
+            <button class="btn btn-sm btn-light col-2 text-dark btn-custom" onclick="window.location.href='categories.html'">← Volver al listado</button>
           </div>
           <div class="row">
             <div class="col text-end">
