--- a/cart.html
+++ b/cart.html
@@ -50,10 +50,10 @@
   </nav>
   <main>
     <br><br><br>
-    <div class="container my-4">
+    <div id="resumen-compra" class="container">
        <div class="row justify-content-center">
         <div id="row" class="col-12 mb-4 "></div>
-          <div id="totales" class="col-10 p-4 border rounded shadow-sm bg-light">
+          <div id="totales" class="col-10 p-4 border rounded shadow-sm">
             <h4 class="mb-3">Resumen de compra</h4>
             <div class="mb-3">
               <label for="tipoEnvio" class="form-label fw-bold">Tipo de envío:</label>
@@ -65,30 +65,39 @@
               </select>
             </div>
 
-            <div class="mb-3 mt-4 p-3 border rounded bg-white">
-        <h5 class="fw-bold mb-2">Dirección de envío</h5>
-        <div class="mb-2">
-          <label for="calle" class="form-label">Calle:</label>
-          <input type="text" id="calle" class="form-control" placeholder="Ej: Av. Principal 123">
-        </div>
-        <div class="mb-2">
-          <label for="ciudad" class="form-label">Ciudad:</label>
-          <input type="text" id="ciudad" class="form-control" placeholder="Ej: Montevideo">
-        </div>
-        <div class="mb-2">
-          <label for="codigoPostal" class="form-label">Código postal:</label>
-          <input type="text" id="codigoPostal" class="form-control" placeholder="Ej: 11300">
-        </div>
-        <div class="mb-2">
-          <label for="pais" class="form-label">País:</label>
-          <input type="text" id="pais" class="form-control" placeholder="Ej: Uruguay">
-        </div>
-      </div>
+            <div class="mb-3 mt-4 p-3 border rounded ">
+    <h5 class="fw-bold mb-3">Dirección de envío</h5>
+
+    <div class="mb-2">
+        <label for="departamento" class="form-label">Departamento</label>
+        <input type="text" id="departamento" class="form-control" placeholder="Ej: Montevideo">
+    </div>
+
+    <div class="mb-2">
+        <label for="localidad" class="form-label">Localidad</label>
+        <input type="text" id="localidad" class="form-control" placeholder="Ej: Pocitos">
+    </div>
+
+    <div class="mb-2">
+        <label for="calle" class="form-label">Calle</label>
+        <input type="text" id="calle" class="form-control" placeholder="Ej: Av. Principal">
+    </div>
+
+    <div class="mb-2">
+        <label for="numero" class="form-label">Número</label>
+        <input type="text" id="numero" class="form-control" placeholder="Ej: 1234">
+    </div>
+
+    <div class="mb-2">
+        <label for="esquina" class="form-label">Esquina</label>
+        <input type="text" id="esquina" class="form-control" placeholder="Ej: Rivera">
+    </div>
+</div>
       <button class="btn btn-outline-primary w-100 mt-2" data-bs-toggle="modal" data-bs-target="#modalPago">
     Seleccionar forma de pago
 </button>
 
-<!-- Modal de forma de pago -->
+
 <div class="modal fade" id="modalPago" tabindex="-1" aria-labelledby="modalPagoLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -126,7 +135,7 @@
       <p id="costo-envio" class="fs-6 text-secondary mb-1">Costo de envío: ---</p>
       <p id="total-pesos" class="fs-5 fw-bold">Total: ---</p>
 
-      <button class="btn btn-primary w-100 mt-3">Finalizar compra</button>
+      <button onclick="validarCompra()" class="btn btn-primary w-100 mt-3">Finalizar compra</button>
     </div>
   </div>
 </div>
