--- a/product-info.html
+++ b/product-info.html
@@ -67,9 +67,9 @@
       <br /><br /><br />
       <div class="container">
         <div class="row border rounded border-2">
-          <div class="d-flex justify-content-between align-items-center mb-3">
-            <button class="btn btn-sm btn-light text-dark m-3" onclick="window.location.href='products.html'">← Volver al listado</button>
-            <button class="btn btn-light m-3">Añadir favoritos ❤</button>
+          <div class="d-flex justify-content-between align-items-center mt-3">
+            <button class="btn btn-sm btn-light text-dark btn-custom" onclick="window.location.href='products.html'">← Volver al listado</button>
+            <button class="btn btn-light text-danger btn-custom btn-fav">❤ Añadir favoritos</button>
           </div>
           <div class="col-6 p-5" id="imagen-producto"></div>
           <div class="col-6" id="info-producto"></div>
