--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@
                   <a onclick="logOut()" class="dropdown-item" href="#" id="logout-btn">Cerrar sesión</a>
                 </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="cart.html" class="btn btn-primary position-relative">
-              <i class="fas fa-shopping-cart">
-                <span class="position-absolute top-100 start-10 translate-middle badge rounded-pill bg-danger" id="carritoCantidad"></span>
-              </i>
-            </a>
+          <li class="nav-item position-relative">
+                <a class="nav-link" href="cart.html">
+                <i class="fas fa-shopping-cart"></i>
+                <span id="carritoCantidad" class="position-absolute rounded-pill start-100 translate-middle badge bg-danger text-white"></span>
+                </a>
           </li>
         </ul>
       </div>
